unpackaged/main/default/objects/Account_Team__c/Account_Team__c.object-meta.xml
<CustomObject>
    <label>Account Team</label>
    <nameField>
        <displayFormat>AT-{000000000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>