unpackaged/main/default/objects/Account_Team__c/fields/Account_Team_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Account Team Safe ID</label>
    <type>Text</type>
</CustomField>