unpackaged/main/default/objects/Account_Team__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Team_Member__r.Full_Name__c + " - " + TEXT(Team_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>