unpackaged/main/default/objects/Account_Team__c/fields/IM_Certified__c.field-meta.xml
<CustomField>
    <fullName>IM_Certified__c</fullName>
    <formula>Team_Member__r.Injection_Molding_Certified__c</formula>
    <label>IM Certified</label>
    <type>Checkbox</type>
</CustomField>