unpackaged/main/default/objects/Account_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>Team_Member__c</columns>
    <columns>Team_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>