unpackaged/main/default/objects/Account_Team__c/listViews/My_Account_Team_Roles.listView-meta.xml
<ListView>
    <fullName>My_Account_Team_Roles</fullName>
    <columns>Team_Member__c</columns>
    <columns>Account__c</columns>
    <columns>Team_Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Responsability__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Account Team Roles</label>
</ListView>